<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/usual_margin"
                style="@style/Widget.Material3.CardView.Elevated"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_preview">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/usual_margin">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_title_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_content_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/shampoo"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textAlignment="textEnd"
                        android:layout_marginStart="@dimen/usual_margin"
                        app:layout_constraintStart_toEndOf="@id/tv_title_type"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_type" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_title_capacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_capacity"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/usual_margin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_type" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_content_capacity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="500ml"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textAlignment="textEnd"
                        android:layout_marginStart="@dimen/usual_margin"
                        app:layout_constraintStart_toEndOf="@id/tv_title_capacity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_capacity" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_title_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_capacity"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/usual_margin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_capacity" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_content_max"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="500ml"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textAlignment="textEnd"
                        android:layout_marginStart="@dimen/usual_margin"
                        app:layout_constraintStart_toEndOf="@id/tv_title_max"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_max" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>