<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/usual_margin"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    android:hint="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="24sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ic_room"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_location"
                    android:layout_marginStart="@dimen/usual_margin"
                    app:tint="?attr/colorOnSecondaryContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/input_room"
                    app:layout_constraintBottom_toBottomOf="@id/input_room"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_room"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    android:hint="@string/room"
                    android:layout_margin="@dimen/usual_margin"
                    app:endIconDrawable="@drawable/ic_arrow_drop_down"
                    app:endIconMode="dropdown_menu"
                    app:layout_constraintStart_toEndOf="@id/ic_room"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_name">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/input_room_auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ic_model"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_shampoo_full"
                    android:layout_marginStart="@dimen/usual_margin"
                    app:tint="?attr/colorOnSecondaryContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_model"
                    app:layout_constraintBottom_toBottomOf="@id/tv_model"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_model"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    tools:text="ho"
                    android:layout_marginHorizontal="@dimen/usual_margin"
                    android:layout_marginTop="@dimen/usual_margin"
                    app:layout_constraintStart_toEndOf="@id/ic_model"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_room" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_new_model"
                    android:layout_margin="@dimen/usual_margin"
                    app:icon="@drawable/ic_shampoo_full"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_model" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>